--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap');
-
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto',sans-serif;
 }
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+}
+
+.App-link {
+  color: black;
+}
+
 body {
   background-color: black;
   
+}
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 header{
@@ -19,20 +51,6 @@ header{
   height: 120px;
   position: relative;
 }
-
-.overlay{
-  position: absolute;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  height: 100%;
-  right: 0;
-  bottom: 0;
-  padding: 0 !important;
-  margin: 0 !important;
-  background-color:rgba(10, 10,10, 0.3);
-}
-
 nav{
   position: absolute;
   z-index: 2;
@@ -42,7 +60,7 @@ nav{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  padding: 50px 60px 0 60px;
+  padding: 20px 10px 0 60px;
 }
 
 li{
@@ -53,57 +71,3 @@ li{
 
 }
 
-a{
-  padding: 5px;
-  background-color:black;
-  text-decoration: none;
-  color: white;
-}
-
-img{
-  height: 230px;
-  width: 390px;
-}
-
-.container{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin-top: 10px;
-  padding-bottom: 10px;
-}
-
-.image{
-  margin-right: 10px;
-  margin-left: 10px;
-  position: relative;
-
-}
-
-.add{
-  position: absolute;
-  width: 100%;
-  background-color: black;
-  transition: all;
-  opacity: 0;
-  cursor: pointer;
-  text-align: center;
-}
-.image:hover .cart1,
-.image:hover .cart2,
-.image:hover .cart3,
-.image:hover .cart4,
-.image:hover .cart5,
-.image:hover .cart6,
-.image:hover .cart7,
-.image:hover .cart8,
-.image:hover .cart9{
-  bottom:50px;
-  opacity: 1;
-  padding: 10px;
-  text-decoration: none;
-}
-
-h3{
-  color: white;
-}
